--- a/web/src/components/Header.astro
+++ b/web/src/components/Header.astro
@@ -5,15 +5,14 @@
   <div class="section__container header__container">
     <div class="header__content">
       <h4>Bienvenido</h4>
-      <h1>Pet Health<br /><span>AI</span></h1>
-      <h2>Predicción Temprana con Inteligencia Artificial</h2>
+      <h1>Pet-Health AI<br /></h1>
+      <h2>Ayuda a tus mascotas lo antes posible</h2>
       <p>
-        Sistema multimodal de machine learning que combina datos clínicos e imágenes
-        para predecir enfermedades en mascotas con alta precisión.
+        Ofrecemos un sistema multimodal de machine learning que ayuda a la predicción temprana de enfermedades de tus mascotas.
       </p>
       <div class="header__btn">
         <button>
-          Explorar Proyecto
+          Probar ahora
           <span><i class="ri-arrow-right-line"></i></span>
         </button>
       </div>
