--- a/web/src/components/Instagram.astro
+++ b/web/src/components/Instagram.astro
@@ -8,8 +8,8 @@ const instagramImages = [
 ---
 
 <section class="section__container instagram__container">
-  <p>VISUALIZACIONES</p>
-  <h2 class="section__header">Instagram</h2>
+  <p>Síguenos</p>
+  <h2 class="section__header">Nuestro Instagram</h2>
   <div class="instagram__grid">
     {instagramImages.map((image) => (
       <img src={image} alt="instagram" class="w-full h-auto" />
