--- a/web/src/components/Intro.astro
+++ b/web/src/components/Intro.astro
@@ -2,25 +2,25 @@
 const introCards = [
   {
     image: "/assets/intro-1.png",
-    title: "Pet Experts",
-    description: "Meet our team of skilled veterinarians, dedicated to your pet's well-being."
+    title: "Veterinarios Expertos",
+    description: "Conoce a nuestro equipo de veterinarios capacitados, dedicados al bienestar de tu mascota."
   },
   {
     image: "/assets/intro-2.png",
-    title: "Vet Services",
-    description: "Offering a wide range of veterinary services to keep your pets healthy and happy."
+    title: "Servicios Veterinarios",
+    description: "Ofrecemos una amplia gama de servicios veterinarios para mantener a tus mascotas saludables y felices."
   },
   {
     image: "/assets/intro-3.png",
-    title: "Contact Us",
-    description: "Reach out to us for any inquiries or schedule an appointment for your pet's care."
+    title: "Contáctanos",
+    description: "Contáctanos para cualquier consulta o para programar una cita para el cuidado de tu mascota."
   }
 ];
 ---
 
 <section class="section__container intro__container">
   <p class="section__subheader">Intro</p>
-  <h2 class="section__header">Get to know us more</h2>
+  <h2 class="section__header">Conócenos más</h2>
   <div class="intro__grid">
     {introCards.map((card, index) => (
       <div class="intro__card">
