--- a/web/src/components/Service.astro
+++ b/web/src/components/Service.astro
@@ -1,16 +1,16 @@
 ---
 const services = [
-  { image: "/assets/service-1.png", title: "Emergency Care" },
-  { image: "/assets/service-2.png", title: "Vaccination Services" },
-  { image: "/assets/service-3.png", title: "Nutrition Counseling" },
-  { image: "/assets/service-4.png", title: "Behavioral Consultation" },
-  { image: "/assets/service-5.png", title: "Pet Boarding Services" }
+  { image: "/assets/service-1.png", title: "Atención de Emergencia" },
+  { image: "/assets/service-2.png", title: "Servicios de Vacunación" },
+  { image: "/assets/service-3.png", title: "Consejería Nutricional" },
+  { image: "/assets/service-4.png", title: "Consulta de Comportamiento" },
+  { image: "/assets/service-5.png", title: "Hospedaje para Mascotas" }
 ];
 ---
 
 <section class="section__container service__container" id="service">
-  <p class="section__subheader">Services</p>
-  <h2 class="section__header">What we can do for you</h2>
+  <p class="section__subheader">Servicios</p>
+  <h2 class="section__header">Lo que podemos hacer por ti</h2>
   <div class="service__flex">
     {services.map((service) => (
       <div class="service__card">
