--- a/web/src/components/Footer.astro
+++ b/web/src/components/Footer.astro
@@ -5,43 +5,43 @@
   <div class="section__container footer__container">
     <div class="footer__col">
       <div class="footer__logo">
-        <a href="#">Pet Place</a>
+        <a href="#">Pet-Health AI</a>
       </div>
     </div>
     
     <div class="footer__col">
-      <h4>Company</h4>
+      <h4>Compañía</h4>
       <ul class="footer__links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Store</a></li>
-        <li><a href="#">Pricing</a></li>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Sobre Nosotros</a></li>
+        <li><a href="#">Servicios</a></li>
+        <li><a href="#">Tienda</a></li>
+        <li><a href="#">Precios</a></li>
         <li><a href="#">Blog</a></li>
-        <li><a href="#">Faq</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Preguntas Frecuentes</a></li>
+        <li><a href="#">Contáctanos</a></li>
       </ul>
     </div>
     
     <div class="footer__col">
-      <h4>Address</h4>
+      <h4>Direcciones</h4>
       <ul class="footer__links">
-        <li><a href="#">New Delhi, India</a></li>
-        <li><a href="#">View on Maps</a></li>
+        <li><a href="#">San Miguel - Lima, Peru</a></li>
+        <li><a href="#">Ver en Maps</a></li>
       </ul>
       <br />
-      <h4>Inquiries</h4>
+      <h4>Consultas</h4>
       <ul class="footer__links">
-        <li><a href="#">+91 0987654321</a></li>
+        <li><a href="#">+51 0987654321</a></li>
         <li><a href="#">info@website.com</a></li>
       </ul>
     </div>
     
     <div class="footer__col">
-      <h4>Newsletter</h4>
-      <p>Stay updated with out latest news</p>
+      <h4>Boletín</h4>
+      <p>Mantente actualizado con nuestras últimas noticias</p>
       <form action="/">
-        <input type="text" placeholder="Your email" />
+        <input type="text" placeholder="Email" class="p-2" />
         <button class="btn">
           <i class="ri-arrow-right-line"></i>
         </button>
@@ -60,6 +60,6 @@
   </div>
   
   <div class="footer__bar">
-    Copyright © 2024 Web Design Mastery. All rights reserved.
+    Copyright © 2025 Pet Health AI.
   </div>
 </footer>
