--- a/web/src/components/Navigation.astro
+++ b/web/src/components/Navigation.astro
@@ -11,11 +11,11 @@
     </div>
   </div>
   <ul class="nav__links" id="nav-links">
-    <li><a href="#home">Home</a></li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#store">Store</a></li>
-    <li><a href="#service">Services</a></li>
-    <li><a href="#contact">Contact</a></li>
+    <li><a href="#home">Inicio</a></li>
+    <li><a href="#about">Sobre Nosotros</a></li>
+    <li><a href="#store">Tienda</a></li>
+    <li><a href="#service">Servicios</a></li>
+    <li><a href="#contact">Contacto</a></li>
   </ul>
 </nav>
 
