--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -9,6 +9,7 @@ import Service from '../components/Service.astro';
 import Testimonials from '../components/Testimonials.astro';
 import Instagram from '../components/Instagram.astro';
 import Footer from '../components/Footer.astro';
+import PredictionModal from '../components/PredictionModal.astro';
 ---
 
 <Layout title="Pet Place - Pet Doctor">
@@ -21,4 +22,5 @@ import Footer from '../components/Footer.astro';
 	<Testimonials />
 	<Instagram />
 	<Footer />
+	<PredictionModal />
 </Layout>
