--- a/web/src/styles/global.css
+++ b/web/src/styles/global.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+@import "tailwindcss";
+
 :root {
   --primary-color: #dcd7f8;
   --text-dark: #3f3b57;
@@ -195,18 +197,13 @@ header {
 }
 
 .header__btn button span {
-  padding: 5px 7px;
-  font-size: 1.5rem;
-  background-color: rgba(0, 0, 0, 0.1);
+  padding: 5px 5px;
+  font-size: 2rem;
   border-radius: 100%;
 }
 
 .header__btn button:hover {
   color: var(--white);
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.header__btn button:hover span {
   background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -564,7 +561,7 @@ img.header__image-bg {
   display: flex;
   align-items: center;
   border: 2px solid var(--primary-color);
-  border-radius: 5rem;
+  border-radius: 25px;
 }
 
 .footer__col form input {
@@ -573,6 +570,7 @@ img.header__image-bg {
   outline: none;
   border: none;
   font-size: 1rem;
+  margin-left: 8px;
   color: var(--text-dark);
   background-color: transparent;
 }
@@ -584,7 +582,7 @@ img.header__image-bg {
   color: var(--text-dark);
   font-size: 2rem;
   background-color: var(--primary-color);
-  border-radius: 5rem;
+  border-radius: 25px;
   cursor: pointer;
 }
 
