--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -12,7 +12,7 @@ import Footer from '../components/Footer.astro';
 import PredictionModal from '../components/PredictionModal.astro';
 ---
 
-<Layout title="Pet Place - Pet Doctor">
+<Layout title="Pet-Health AI">
 	<Navigation />
 	<Header />
 	<Intro />
