--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ const { title = 'Pet Health AI - Predicción de Enfermedades con IA' } = Astro.p
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/favicon-light.svg" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
 			rel="stylesheet"
